single card ready

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
       </div>
     </nav>
-    <header class="w-[50%] min-h-screen mx-auto bg-orange-500">
+    <header class="w-[50%] mx-auto">
       <div
-        class="font-medium h-[200px] bg-pink-400 flex flex-col items-center gap-y-3 pt-6"
+        class="font-medium h-[200px] bg-pink-400 flex flex-col items-center justify-center gap-y-3"
       >
         <h1 class="text-4xl uppercase text-orange-500">
           Chicken Crisper Combos
@@ -89,5 +89,48 @@
         </select>
       </div>
     </header>
+    <section class="w-[60%] min-h-screen mx-auto bg-orange-500 pt-10">
+      <div class="grid grid-cols-1 md:grid-cols-3 place-self-center gap-2">
+        <div
+          class="bg-gray-200 h-[485px] w-full rounded-md flex flex-col p-[14px]"
+        >
+          <div class="basis-[50%] w-full h-full rounded-sm">
+            <img
+              class="w-full h-full object-cover"
+              src="http://t3.gstatic.com/licensed-image?q=tbn:ANd9GcRvC27D9KlxeEham1w-Wpd_pu3hd4A-OywxRbdnx9JFLpcTD7dfL0bD_WI6Ro8QkzrPLkBMzA9osrMpi4JSP5Y"
+              alt=""
+            />
+          </div>
+          <div
+            class="basis-[50%] pt-3 flex flex-col items-center justify-between"
+          >
+            <div class="w-full h-full">
+              <p class="text-xl font-semibold">Chicken</p>
+              <p class="text-sm font-medium text-gray-600">69$/each</p>
+              <p class="line-clamp-3 text-sm text-gray-500 my-4">
+                Chicken fajitas served with rice and beans, tortials, guacamole,
+                salsa and sour cream Chicken fajitas served with Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Natus hic dolorum
+                molestiae fuga neque. Obcaecati quos mollitia ullam rem
+                molestias nesciunt excepturi iure, delectus corrupti accusantium
+                totam corporis autem. Illo.
+              </p>
+            </div>
+            <div class="w-full h-full">
+              <button
+                class="py-1 w-full cursor-pointer rounded-md bg-orange-500 font-medium text-white mb-2"
+              >
+                <p class="text-base">Add To Order</p>
+              </button>
+              <button
+                class="py-1 w-full cursor-pointer rounded-md bg-inherit border-[3px] border-orange-500 font-medium text-white"
+              >
+                <p class="text-base text-orange-500">Customize</p>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
